# dt2012_weeks

./: CMakeLists.txt  README.md
check/: README.md  main.py  w1.json.bkg  w1.yaml
week1/: Bonus.java  CMakeLists.txt  E1.java  E10.java  E11.java  E2.java  E3.java  E4.java  E5.java  E6.java  E7.java  E8.java  E9.java  README
week2/: Bonus.java  CMakeLists.txt  E1.java  E2.java  E3.java  E4.java  E5.java  E6.java  E7.java  E8.java  E9.java
week3/: Bonus.java  CMakeLists.txt  E1.java  E2.java  E3.java  E4.java  E5.java  E6.java  E7.java  dups
week4/: CMakeLists.txt  E1.java  NumericalArrays.java  StdDraw.java
week5/: Bonus.java  CMakeLists.txt  E1.java  E2.java  E3.java  E4.java  E5.java  E6.java  E7.java  E8.java  E9.java  Luminance.java
week6/: BouncingBall.java  CMakeLists.txt  Complex.java  IntSet.java  ManyBalls.java  RandomBalls.java  StdDraw.java
week7/: Bonus.java  CMakeLists.txt  CounterView.java  DiceController.java  DiceController2.java  DiceModel.java  DiceView.java  DiceView2.java  E1.java  E5.java  E8.java
